--- a/index.html
+++ b/index.html
@@ -16,28 +16,28 @@
     <header>
         <!--navbar logo(Brand) Start-->
         <div class="logo">
-            <h1>NEWS - PORTAL</h1>
+            <a href="../index.html">
+                <h1>NEWS - PORTAL</h1>
+            </a>
         </div>
         <!--body logo(Brand) End-->
 
         <!--body links Start-->
         <nav>
             <ul>
-                <li><a href="#">Oʻzbekiston</a></li>
+                <li><a href="pages/categories.html">Oʻzbekiston</a></li>
                 <li><a href="#">Dunyo</a></li>
-                <li><a href="#">Jamiyat</a></li>
-                <li><a href="#">Texno</a></li>
+                <li><a href="#">Texnologiya</a></li>
+                <li><a href="#">Ilmiy</a></li>
                 <li><a href="#">Sport</a></li>
-                <li><a href="#">Avto</a></li>
-                <li><a href="#">Madaniyat</a></li>
                 <li><a href="#">Iqtisodiyot</a></li>
-                <li><a href="#">Foydali</a></li>
+                <li><a href="#">Boshqa</a></li>
             </ul>
         </nav>
         <!--body links End-->
 
         <div class="logo">
-            <h1>NEWS - PORTAL</h1>
+            <h1></h1>
         </div>
     </header>
     <!--NAVBAR END-->
@@ -80,7 +80,7 @@
                                         <p class="news-card__excerpt">Lorem ipsum dolor sit amet consectetur adipisicing
                                             elit. Est pariatur nemo tempore repellat? Ullam sed officia iure architecto
                                             deserunt distinctio, pariatur&hellip;</p>
-                                        <a href="#" class="news-card__read-more">Read more <i
+                                        <a href="pages/show.html" class="news-card__read-more">Read more <i
                                                 class="fas fa-long-arrow-alt-right"></i></a>
                                     </div>
                                 </div>
@@ -97,7 +97,7 @@
                                         <p class="news-card__excerpt">Lorem ipsum dolor sit amet consectetur adipisicing
                                             elit. Est pariatur nemo tempore repellat? Ullam sed officia iure architecto
                                             deserunt distinctio, pariatur&hellip;</p>
-                                        <a href="#" class="news-card__read-more">Read more <i
+                                        <a href="pages/show.html" class="news-card__read-more">Read more <i
                                                 class="fas fa-long-arrow-alt-right"></i></a>
                                     </div>
                                 </div>
@@ -118,7 +118,7 @@
                                         <p class="news-card__excerpt">Lorem ipsum dolor sit amet consectetur adipisicing
                                             elit. Est pariatur nemo tempore repellat? Ullam sed officia iure architecto
                                             deserunt distinctio, pariatur&hellip;</p>
-                                        <a href="#" class="news-card__read-more">Read more <i
+                                        <a href="pages/show.html" class="news-card__read-more">Read more <i
                                                 class="fas fa-long-arrow-alt-right"></i></a>
                                     </div>
                                 </div>
@@ -135,7 +135,7 @@
                                         <p class="news-card__excerpt">Lorem ipsum dolor sit amet consectetur adipisicing
                                             elit. Est pariatur nemo tempore repellat? Ullam sed officia iure architecto
                                             deserunt distinctio, pariatur&hellip;</p>
-                                        <a href="#" class="news-card__read-more">Read more <i
+                                        <a href="pages/show.html" class="news-card__read-more">Read more <i
                                                 class="fas fa-long-arrow-alt-right"></i></a>
                                     </div>
                                 </div>
@@ -156,7 +156,7 @@
                                         <p class="news-card__excerpt">Lorem ipsum dolor sit amet consectetur adipisicing
                                             elit. Est pariatur nemo tempore repellat? Ullam sed officia iure architecto
                                             deserunt distinctio, pariatur&hellip;</p>
-                                        <a href="#" class="news-card__read-more">Read more <i
+                                        <a href="pages/show.html" class="news-card__read-more">Read more <i
                                                 class="fas fa-long-arrow-alt-right"></i></a>
                                     </div>
                                 </div>
@@ -173,7 +173,7 @@
                                         <p class="news-card__excerpt">Lorem ipsum dolor sit amet consectetur adipisicing
                                             elit. Est pariatur nemo tempore repellat? Ullam sed officia iure architecto
                                             deserunt distinctio, pariatur&hellip;</p>
-                                        <a href="#" class="news-card__read-more">Read more <i
+                                        <a href="pages/show.html" class="news-card__read-more">Read more <i
                                                 class="fas fa-long-arrow-alt-right"></i></a>
                                     </div>
                                 </div>
@@ -190,7 +190,7 @@
                                         <p class="news-card__excerpt">Lorem ipsum dolor sit amet consectetur adipisicing
                                             elit. Est pariatur nemo tempore repellat? Ullam sed officia iure architecto
                                             deserunt distinctio, pariatur&hellip;</p>
-                                        <a href="#" class="news-card__read-more">Read more <i
+                                        <a href="pages/show.html" class="news-card__read-more">Read more <i
                                                 class="fas fa-long-arrow-alt-right"></i></a>
                                     </div>
                                 </div>
@@ -203,7 +203,7 @@
                 <div class="footer-card">
                     <img src="assets/images/1.webp" alt="" class="footer-card__image">
                     <div class="footer-card__text-wrapper">
-                        <a href="" class="footer-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
+                        <a href="pages/show.html" class="footer-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
                             yoqib yuborildi</a>
                         <div class="footer-card__post-date">
                             <i class="fa-solid fa-calendar-days"></i><span> Jan 29, 2018</span>
@@ -213,7 +213,7 @@
                 <div class="footer-card">
                     <img src="assets/images/1.webp" alt="" class="footer-card__image">
                     <div class="footer-card__text-wrapper">
-                        <a href="" class="footer-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
+                        <a href="pages/show.html" class="footer-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
                             yoqib yuborildi</a>
                         <div class="footer-card__post-date">
                             <i class="fa-solid fa-calendar-days"></i><span> Jan 29, 2018</span>
@@ -223,7 +223,7 @@
                 <div class="footer-card">
                     <img src="assets/images/1.webp" alt="" class="footer-card__image">
                     <div class="footer-card__text-wrapper">
-                        <a href="" class="footer-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
+                        <a href="pages/show.html" class="footer-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
                             yoqib yuborildi</a>
                         <div class="footer-card__post-date">
                             <i class="fa-solid fa-calendar-days"></i><span> Jan 29, 2018</span>
@@ -233,7 +233,7 @@
                 <div class="footer-card">
                     <img src="assets/images/1.webp" alt="" class="footer-card__image">
                     <div class="footer-card__text-wrapper">
-                        <a href="" class="footer-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
+                        <a href="pages/show.html" class="footer-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
                             yoqib yuborildi</a>
                         <div class="footer-card__post-date">
                             <i class="fa-solid fa-calendar-days"></i><span> Jan 29, 2018</span>
@@ -253,7 +253,7 @@
                 <div class="contents-card">
                     <img src="assets/images/1.webp" alt="" class="contents-card__image">
                     <div class="contents-card__text-wrapper">
-                        <a href="" class="contents-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
+                        <a href="pages/show.html" class="contents-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
                             yoqib yuborildi</a>
                         <div class="contents-card__post-date">
                             <i class="fa-solid fa-calendar-days"></i><span> Jan 29, 2018</span>
@@ -264,7 +264,7 @@
                 <div class="contents-card">
                     <img src="assets/images/1.webp" alt="" class="contents-card__image">
                     <div class="contents-card__text-wrapper">
-                        <a href="" class="contents-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
+                        <a href="pages/show.html" class="contents-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
                             yoqib yuborildi</a>
                         <div class="contents-card__post-date">
                             <i class="fa-solid fa-calendar-days"></i><span> Jan 29, 2018</span>
@@ -275,7 +275,7 @@
                 <div class="contents-card">
                     <img src="assets/images/1.webp" alt="" class="contents-card__image">
                     <div class="contents-card__text-wrapper">
-                        <a href="" class="contents-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
+                        <a href="pages/show.html" class="contents-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
                             yoqib yuborildi</a>
                         <div class="contents-card__post-date">
                             <i class="fa-solid fa-calendar-days"></i><span> Jan 29, 2018</span>
@@ -286,7 +286,7 @@
                 <div class="contents-card">
                     <img src="assets/images/1.webp" alt="" class="contents-card__image">
                     <div class="contents-card__text-wrapper">
-                        <a href="" class="contents-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
+                        <a href="pages/show.html" class="contents-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
                             yoqib yuborildi</a>
                         <div class="contents-card__post-date">
                             <i class="fa-solid fa-calendar-days"></i><span> Jan 29, 2018</span>
@@ -297,7 +297,7 @@
                 <div class="contents-card">
                     <img src="assets/images/1.webp" alt="" class="contents-card__image">
                     <div class="contents-card__text-wrapper">
-                        <a href="" class="contents-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
+                        <a href="pages/show.html" class="contents-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
                             yoqib yuborildi</a>
                         <div class="contents-card__post-date">
                             <i class="fa-solid fa-calendar-days"></i><span> Jan 29, 2018</span>
@@ -308,7 +308,7 @@
                 <div class="contents-card">
                     <img src="assets/images/1.webp" alt="" class="contents-card__image">
                     <div class="contents-card__text-wrapper">
-                        <a href="" class="contents-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
+                        <a href="pages/show.html" class="contents-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
                             yoqib yuborildi</a>
                         <div class="contents-card__post-date">
                             <i class="fa-solid fa-calendar-days"></i><span> Jan 29, 2018</span>
@@ -319,7 +319,7 @@
                 <div class="contents-card">
                     <img src="assets/images/1.webp" alt="" class="contents-card__image">
                     <div class="contents-card__text-wrapper">
-                        <a href="" class="contents-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
+                        <a href="pages/show.html" class="contents-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
                             yoqib yuborildi</a>
                         <div class="contents-card__post-date">
                             <i class="fa-solid fa-calendar-days"></i><span> Jan 29, 2018</span>
@@ -330,7 +330,7 @@
                 <div class="contents-card">
                     <img src="assets/images/1.webp" alt="" class="contents-card__image">
                     <div class="contents-card__text-wrapper">
-                        <a href="" class="contents-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
+                        <a href="pages/show.html" class="contents-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
                             yoqib yuborildi</a>
                         <div class="contents-card__post-date">
                             <i class="fa-solid fa-calendar-days"></i><span> Jan 29, 2018</span>
@@ -341,7 +341,7 @@
                 <div class="contents-card">
                     <img src="assets/images/1.webp" alt="" class="contents-card__image">
                     <div class="contents-card__text-wrapper">
-                        <a href="" class="contents-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
+                        <a href="pages/show.html" class="contents-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
                             yoqib yuborildi</a>
                         <div class="contents-card__post-date">
                             <i class="fa-solid fa-calendar-days"></i><span> Jan 29, 2018</span>
@@ -352,7 +352,7 @@
                 <div class="contents-card">
                     <img src="assets/images/1.webp" alt="" class="contents-card__image">
                     <div class="contents-card__text-wrapper">
-                        <a href="" class="contents-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
+                        <a href="pages/show.html" class="contents-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
                             yoqib yuborildi</a>
                         <div class="contents-card__post-date">
                             <i class="fa-solid fa-calendar-days"></i><span> Jan 29, 2018</span>
@@ -363,7 +363,7 @@
                 <div class="contents-card">
                     <img src="assets/images/1.webp" alt="" class="contents-card__image">
                     <div class="contents-card__text-wrapper">
-                        <a href="" class="contents-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
+                        <a href="pages/show.html" class="contents-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
                             yoqib yuborildi</a>
                         <div class="contents-card__post-date">
                             <i class="fa-solid fa-calendar-days"></i><span> Jan 29, 2018</span>
@@ -374,7 +374,7 @@
                 <div class="contents-card">
                     <img src="assets/images/1.webp" alt="" class="contents-card__image">
                     <div class="contents-card__text-wrapper">
-                        <a href="" class="contents-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
+                        <a href="pages/show.html" class="contents-card__title">Fransiyada ommaviy namoyishlar davomida AQSH bayrogʻi
                             yoqib yuborildi</a>
                         <div class="contents-card__post-date">
                             <i class="fa-solid fa-calendar-days"></i><span> Jan 29, 2018</span>
