--- a/pages/show.html
+++ b/pages/show.html
@@ -26,21 +26,19 @@
         <!--body links Start-->
         <nav>
             <ul>
-                <li><a href="#">Oʻzbekiston</a></li>
+                <li><a href="../pages/categories.html">Oʻzbekiston</a></li>
                 <li><a href="#">Dunyo</a></li>
-                <li><a href="#">Jamiyat</a></li>
-                <li><a href="#">Texno</a></li>
+                <li><a href="#">Texnologiya</a></li>
+                <li><a href="#">Ilmiy</a></li>
                 <li><a href="#">Sport</a></li>
-                <li><a href="#">Avto</a></li>
-                <li><a href="#">Madaniyat</a></li>
                 <li><a href="#">Iqtisodiyot</a></li>
-                <li><a href="#">Foydali</a></li>
+                <li><a href="#">Boshqa</a></li>
             </ul>
         </nav>
         <!--body links End-->
 
         <div class="logo">
-            <h1>NEWS - PORTAL</h1>
+            <h1></h1>
         </div>
     </header>
     <!--NAVBAR END-->
